
syntax = "proto3";

package Proto;

//错误码 考虑平台问题 不要尝试串码
enum ErrorCode
{	
    Error = 0;//通用错误
	OK = 1; //处理成功
	LoginFailure = 2;//登陆失败
	RegExistUserName = 3;//用户名重复
	RegInputEmptyOrNull = 4;//输入为空
	NoGamePlayerData = 5;//没有游戏角色信息
	NoHeroInfo = 6 ;//英雄数据异常
    NOFoundServerID = 7;//没有对应的serverID
    NOFreeBattleServer =8;//没有空闲的战斗服务器
    PlayerIsInBattle =9;//玩家已经在战斗中
    BattleServerHasDisconnect =10;//战斗服务器已经断开连接
    NOFoundUserOnBattleServer = 11;//没有申请战斗服务器
    NOFoundUserBattleServer = 12;//没有战斗服务器
    NOFoundItem =13; //没有道具
    NOEnoughItem =14;//道具数量不足
    IsWearOnHero =15;//穿戴中
    NoEnoughtGold =16;//金币不足
    NoFreeGateServer =17;//没有空闲网关服务器
    NameOrPwdLeghtIncorrect = 18;//账号或者密码长度不好
    NeedHeroLevel = 19;//需要英雄等级
    NoItemsShop = 20;//没有道具商店
    NoFoundItemInShop = 21;//商店中没有该道具
    NoEnoughtCoin = 22 ;//钻石不足
    PackageSizeLimit = 23;//背包上限
}

//empty text
message Void
{
}


